--- a/tester/tester.csproj
+++ b/tester/tester.csproj
@@ -2,11 +2,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\code\code.csproj" />
+    <ProjectReference Include="..\solver\solver.csproj" />
   </ItemGroup>
+
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
